# Projeto-FastAPI-com-Desenvolvimento-Orientado-a-Testes-TDD

./: README.md  comandos.txt  pyproject.toml
store/: main.py  routers.py
store/controllers/: product.py
store/core/: exceptions.py
store/db/: mongo.py
store/models/: base.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_schemas.py
tests/test_schemas.py/: test_product.py
tests/usecases/: test_product.py
